--- a/Lab3/sim/sim.build_log.htm
+++ b/Lab3/sim/sim.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      UL2CM3.DLL V1.163.0.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-\\Mac\Home\Documents\sim\sim.uvproj
+Z:\Workspace\478Projects\Lab3\sim\sim.uvproj
 Project File Date:  02/25/2020
 
 <h2>Output:</h2>
