--- a/Lab4/switch/switch.build_log.htm
+++ b/Lab4/switch/switch.build_log.htm
@@ -2,11 +2,37 @@
 <body>
 <pre>
 <h1>µVision Build Log</h1>
+<h2>Tool Versions:</h2>
+IDE-Version: µVision V5.29.0.0
+Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Joshua Agulto, San Francisco State University, LIC=----
+ 
+Tool Versions:
+Toolchain:       MDK-Lite  Version: 5.29.0.0
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
+CPU DLL:         SARMCM3.DLL V5.29.0.0
+Dialog DLL:      DCM.DLL V1.17.3.0
+Target DLL:      lmidk-agdi.dll V???
+Dialog DLL:      TCM.DLL V1.36.5.0
+ 
 <h2>Project:</h2>
-C:\ti\TivaWare_C_Series-2.1.0.12573\examples\boards\my_projects_123\switch\switch.uvproj
-Project File Date:  11/04/2014
+Z:\Workspace\478Projects\Lab4\switch\switch.uvproj
+Project File Date:  02/25/2020
 
 <h2>Output:</h2>
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+Rebuild target 'Target 1'
+assembling startup_rvmdk.S...
+compiling switch.c...
+linking...
+Program Size: Code=1104 RO-data=16 RW-data=0 ZI-data=352  
+".\switch.axf" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
