--- a/Lab4/my_switch/Objects/my_switch.build_log.htm
+++ b/Lab4/my_switch/Objects/my_switch.build_log.htm
@@ -21,25 +21,22 @@ Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-Z:\Workspace\478Projects\Lab4\toggle\toggle.uvprojx
+Z:\Workspace\478Projects\Lab4\my_switch\my_switch.uvprojx
 Project File Date:  03/03/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
-compiling toggle.c...
+compiling my_switch.c...
+Warning: C3910W: Old syntax, please use '--c99'.
 linking...
-Program Size: Code=1056 RO-data=16 RW-data=0 ZI-data=352  
-".\toggle.axf" - 0 Error(s), 0 Warning(s).
+.\Objects\my_switch.axf: Warning: L3910W: Old syntax, please use '--entry'.
+Program Size: Code=1108 RO-data=16 RW-data=0 ZI-data=352  
+Finished: 0 information, 1 warning and 0 error messages.
+".\Objects\my_switch.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
-
-Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
-                ARM.CMSIS.5.6.0
-                CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.3.0
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.TM4C_DFP.1.1.0.pack
@@ -48,12 +45,9 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
-  C:\Users\jagulto\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\Core\Include
   C:\Users\jagulto\AppData\Local\Arm\Packs\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
 
 <h2>Collection of Component Files used:</h2>
-
-   * Component: ARM::CMSIS:CORE:5.3.0
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
