--- a/Lab5/switch_PinMux/switch_PinMux.build_log.htm
+++ b/Lab5/switch_PinMux/switch_PinMux.build_log.htm
@@ -8,28 +8,30 @@ Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: Joshua Agulto, San Francisco State University, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: <unknown>
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\ARMCC\Bin
-C Compiler:      Armcc.exe
-Assembler:       Armasm.exe
-Linker/Locator:  ArmLink.exe
-Library Manager: ArmAr.exe
-Hex Converter:   FromElf.exe
-CPU DLL:         SARMCM3.DLL
-Dialog DLL:      DCM.DLL
-    Target DLL: lmidk-agdi.dll
-Dialog DLL:      TCM.DLL
+Toolchain:       MDK-Lite  Version: 5.29.0.0
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
+CPU DLL:         SARMCM3.DLL V5.29.0.0
+Dialog DLL:      DCM.DLL V1.17.3.0
+Target DLL:      lmidk-agdi.dll V???
+Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 Z:\Workspace\478Projects\Lab5\switch_PinMux\switch_PinMux.uvprojx
 Project File Date:  03/10/2020
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
---- Error: failed to execute 'C:\Keil_v5\ARM\ARMCC\ARMCC\Bin\ArmAsm'
-".\switch_PinMux.axf" - 1 Error(s), 0 Warning(s).
+compiling switch_PinMux.c...
+linking...
+Program Size: Code=1512 RO-data=16 RW-data=0 ZI-data=352  
+".\switch_PinMux.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -52,7 +54,6 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
