--- a/Lab5/toggle_PinMux/toggle_PinMux.build_log.htm
+++ b/Lab5/toggle_PinMux/toggle_PinMux.build_log.htm
@@ -2,26 +2,59 @@
 <body>
 <pre>
 <h1>µVision Build Log</h1>
+<h2>Tool Versions:</h2>
+IDE-Version: µVision V5.29.0.0
+Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Joshua Agulto, San Francisco State University, LIC=----
+ 
+Tool Versions:
+Toolchain:       MDK-Lite  Version: 5.29.0.0
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.06 update 6 (build 750)
+Assembler:       Armasm.exe V5.06 update 6 (build 750)
+Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
+Library Manager: ArmAr.exe V5.06 update 6 (build 750)
+Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
+CPU DLL:         SARMCM3.DLL V5.29.0.0
+Dialog DLL:      DCM.DLL V1.17.3.0
+Target DLL:      lmidk-agdi.dll V???
+Dialog DLL:      TCM.DLL V1.36.5.0
+ 
 <h2>Project:</h2>
-C:\ti\TivaWare_C_Series-2.1.0.12573\examples\boards\my_projects_123\toggle_PinMux\toggle_PinMux.uvproj
-Project File Date:  09/24/2014
+Z:\Workspace\478Projects\Lab5\toggle_PinMux\toggle_PinMux.uvprojx
+Project File Date:  03/10/2020
 
 <h2>Output:</h2>
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
 compiling toggle_PinMux.c...
 linking...
-Program Size: Code=1440 RO-data=16 RW-data=0 ZI-data=352  
+Program Size: Code=1444 RO-data=16 RW-data=0 ZI-data=352  
 ".\toggle_PinMux.axf" - 0 Error(s), 0 Warning(s).
-Load "C:\\ti\\TivaWare_C_Series-2.1.0.12573\\examples\\boards\\my_projects_123\\toggle_PinMux\\toggle_PinMux.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Connection failed!, error code=&d
-Error: Flash Download failed  -  Target DLL has been cancelled
-Load "C:\\ti\\TivaWare_C_Series-2.1.0.12573\\examples\\boards\\my_projects_123\\toggle_PinMux\\toggle_PinMux.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
+
+<h2>Software Packages used:</h2>
+
+Package Vendor: ARM
+                http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
+                ARM.CMSIS.5.6.0
+                CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: CORE Version: 5.3.0
+
+Package Vendor: Keil
+                http://www.keil.com/pack/Keil.TM4C_DFP.1.1.0.pack
+                Keil.TM4C_DFP.1.1.0
+                Texas Instruments Tiva C Series Device Support and Examples
+
+<h2>Collection of Component include folders:</h2>
+  .\RTE\_Target_1
+  C:\Users\jagulto\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\Core\Include
+  C:\Users\jagulto\AppData\Local\Arm\Packs\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C123
+
+<h2>Collection of Component Files used:</h2>
+
+   * Component: ARM::CMSIS:CORE:5.3.0
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
