--- a/Lab7/Rotary/toggle_PinMux.build_log.htm
+++ b/Lab7/Rotary/toggle_PinMux.build_log.htm
@@ -21,17 +21,17 @@ Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-\\Mac\Home\Workspace\478Projects\Lab4\switch\switch.uvprojx
-Project File Date:  02/25/2020
+Z:\Workspace\478Projects\Lab7\Rotary\toggle_PinMux.uvprojx
+Project File Date:  03/10/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
 assembling startup_rvmdk.S...
-compiling switch.c...
+compiling toggle_PinMux.c...
 linking...
-Program Size: Code=1104 RO-data=16 RW-data=0 ZI-data=352  
-".\switch.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=1632 RO-data=16 RW-data=0 ZI-data=352  
+".\toggle_PinMux.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
