--- a/Final Project/toggle_timer_interrupt/toggle_timer_interrupt.htm
+++ b/Final Project/toggle_timer_interrupt/toggle_timer_interrupt.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\toggle_timer_interrupt.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\toggle_timer_interrupt.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Tue May 19 17:33:00 2020
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Tue May 19 19:03:51 2020
 <BR><P>
 <H3>Maximum Stack Usage =        112 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -224,25 +224,26 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[15]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[6]"></a>Timer0A_Handler</STRONG> (Thumb, 106 bytes, Stack size 8 bytes, toggle_timer_interrupt.o(.text))
+<P><STRONG><a name="[6]"></a>Timer0A_Handler</STRONG> (Thumb, 134 bytes, Stack size 8 bytes, toggle_timer_interrupt.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 112<LI>Call Chain = Timer0A_Handler &rArr; UARTprintf &rArr; UARTvprintf &rArr; UARTwrite
 </UL>
 <BR>[Calls]<UL><LI><a href="#[22]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UARTprintf
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_rvmdk.o(RESET)
 </UL>
-<P><STRONG><a name="[26]"></a>Interrupt_Init</STRONG> (Thumb, 78 bytes, Stack size 0 bytes, toggle_timer_interrupt.o(.text))
+<P><STRONG><a name="[26]"></a>Interrupt_Init</STRONG> (Thumb, 82 bytes, Stack size 0 bytes, toggle_timer_interrupt.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[15]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[7]"></a>GPIOPortF_Handler</STRONG> (Thumb, 156 bytes, Stack size 8 bytes, toggle_timer_interrupt.o(.text))
-<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = GPIOPortF_Handler
+<P><STRONG><a name="[7]"></a>GPIOPortF_Handler</STRONG> (Thumb, 384 bytes, Stack size 8 bytes, toggle_timer_interrupt.o(.text))
+<BR><BR>[Stack]<UL><LI>Max Depth = 112<LI>Call Chain = GPIOPortF_Handler &rArr; UARTprintf &rArr; UARTvprintf &rArr; UARTwrite
 </UL>
-<BR>[Calls]<UL><LI><a href="#[1b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysCtlDelay
+<BR>[Calls]<UL><LI><a href="#[22]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UARTprintf
+<LI><a href="#[1b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysCtlDelay
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_rvmdk.o(RESET)
 </UL>
-<P><STRONG><a name="[15]"></a>main</STRONG> (Thumb, 206 bytes, Stack size 0 bytes, toggle_timer_interrupt.o(.text))
+<P><STRONG><a name="[15]"></a>main</STRONG> (Thumb, 478 bytes, Stack size 0 bytes, toggle_timer_interrupt.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = main &rArr; ConfigureUART &rArr; GPIOPinTypeUART &rArr; GPIOPadConfigSet
 </UL>
 <BR>[Calls]<UL><LI><a href="#[23]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SysCtlClockGet
@@ -299,6 +300,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[30]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;UARTvprintf
 </UL>
 <BR>[Called By]<UL><LI><a href="#[6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Timer0A_Handler
+<LI><a href="#[7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIOPortF_Handler
 </UL>
 
 <P><STRONG><a name="[58]"></a>__use_two_region_memory</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
